syntax = "proto3";

import "google/protobuf/empty.proto";


package distributed_training;

message Worker{
    string name = 1;
    int32 speed = 2;
}

message ModelWeights {
    string name = 1;
    bytes values = 2; // Use plural to indicate a list
}

message ModelGradients {
    string name = 1;
    bytes values = 2; // Use plural to indicate a list
}

message DataSet {
    int32 data_start = 1;
    int32 data_end = 2; // Changed to 2 for uniqueness
}

message TrainingConfig {
    float learning_rate = 1;
    float momentum = 2; // Changed to 2 for uniqueness
}

service TrainingService {
    rpc GetModelWeights(Worker) returns (ModelWeights) {}
    rpc SendModelWeights(ModelWeights) returns (google.protobuf.Empty) {}
    rpc GetDataSet(DataSet) returns (google.protobuf.Empty) {}
    rpc GetTrainingConfig(TrainingConfig) returns (google.protobuf.Empty) {}
    rpc SendGradients(ModelGradients) returns (ModelGradients) {}
}
